--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@
 }
 
 body {
+  color: var(--primary-text-color);
+
   font-family: "Roboto", sans-serif;
 }
 
@@ -54,6 +56,11 @@ ul {
   text-align: left;
   vertical-align: Top;
   letter-spacing: 0.03em;
+}
+
+.logo:focus,
+.logo:hover {
+  color: var(--primary-text-color);
 }
 
 .logo span {
@@ -207,6 +214,11 @@ footer {
   background-color: var(--background-footer-color);
 }
 
+.address:hover,
+.address:focus {
+  color: var(--accent-color);
+}
+
 .logo-footer {
   color: var(--accent-color);
 
@@ -215,6 +227,11 @@ footer {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+}
+
+.logo-footer:focus,
+.logo-footer:hover {
+  color: var(--wite-color);
 }
 
 .logo-footer span {
